--- a/themes.html
+++ b/themes.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAR</title>
     <link href="themes.css" rel="stylesheet">
-    <link href="https://spng.pngfind.com/pngs/s/202-2027975_red-clipart-car-toy-car-clip-art-hd.png" rel="icon">
+    <!--<link href="https://spng.pngfind.com/pngs/s/202-2027975_red-clipart-car-toy-car-clip-art-hd.png" rel="icon">-->
+    <link rel="icon" href="red-car-icon.png">
 </head>
 <body>
     <fieldset>
@@ -39,8 +40,15 @@
                 <div class="wheel-white right-w-w"></div>
                 <div class="wheel right-wheel"></div>
             </div>
-
+ <div class="road">
+            <div class="road-line line1"></div>
+            <div class="road-line line2"></div>
+            <div class="road-line line3"></div>
         </div>
+        </div>
+
+       
+
     </main>
 </body>
 </html>
